plugins {
    id 'org.springframework.boot' version '2.3.5.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'


    // Code style
    id 'checkstyle'

    // PMD
    id 'pmd'

}

bootJar {
    enabled = false
}

jar {
    enabled = true
}

group = 'nl.tudelft.sem.template'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.commons:commons-lang3:3.12.0'


    // Local test nl.tudelft.sem.template.database (in-memory)
    implementation 'com.h2database:h2'
    developmentOnly 'org.hibernate:hibernate-entitymanager'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
    testImplementation('org.assertj:assertj-core:3.23.1')
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}


checkstyle {
    toolVersion "8.37"
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
    ignoreFailures = false
    maxErrors = 0
    maxWarnings = 0
}

pmd {
    incrementalAnalysis = true
    sourceSets = [sourceSets.main]
}


